--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>Stencil GL Boxes Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <script type="module" src="/build/app.esm.js"></script>
+  <script type="module" src="/build/app.esm.js" id="script"></script>
+  <script>
+    document.querySelector('#script')['data-opts'] = { syncQueue: true };
+  </script>
   <script nomodule src="/build/app.js"></script>
 	<link rel="stylesheet" href="/assets/global.css">
 </head>
