--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     document.querySelector('#script')['data-opts'] = { syncQueue: true };
   </script>
   <script nomodule src="/build/app.js"></script>
-	<link rel="stylesheet" href="/assets/global.css">
+  <link rel="stylesheet" href="/assets/global.css">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
 <body>
   <stencil-gl-boxes></stencil-gl-boxes>
